# cellular_automaton

./: Abstract_view.cpp  Abstract_view.h  App.cpp  App.h  CMakeLists.txt  Cellular_Automaton.cpp  Cellular_Automaton.h  Console_view.cpp  Console_view.h  Controller.cpp  Controller.h  KeyProcessor.cpp  KeyProcessor.h  README.md  Window_view.cpp  Window_view.h  main.cpp
views/: Console_view.cpp  Console_view.h  IView.cpp  IView.h  Window_view.cpp  Window_view.h
